--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,12 @@ project(lib_affir)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(MODEL_FILES
+        src/models/token.h
+        src/models/token.cpp)
+
 set(SOURCE_FILES
+        ${MODEL_FILES}
         src/main.cpp
 )
 
