chore: init FileStorage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,16 @@ project(lib_affir)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(STORAGE_FILES
+        src/storages/fileStorage.cpp
+        src/storages/fileStorage.h)
+
 set(MODEL_FILES
         src/models/token.h
         src/models/token.cpp)
 
 set(SOURCE_FILES
+        ${STORAGE_FILES}
         ${MODEL_FILES}
         src/main.cpp
 )
