chore: update configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,14 @@ set(SOURCE_FILES
         ${STORAGE_FILES}
         ${MODEL_FILES}
         src/main.cpp
+        src/filters/base.cpp
+        src/filters/base.h
+        src/filters/stem_filter.cpp
+        src/filters/stem_filter.h
+        src/filters/russian_porter_stemmer.cpp
+        src/filters/russian_porter_stemmer.h
+        src/filters/english_stemmer.cpp
+        src/filters/english_stemmer.h
 )
 
 add_executable(lib_affir ${SOURCE_FILES})
