--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,12 @@ set(MODEL_FILES
         src/models/bigToken.cpp
 )
 
+set(PROCESSING_FILES
+        src/processing/filterOrder.h
+        src/processing/dataHandler.h
+        src/processing/dataHandler.cpp
+)
+
 set(INDEXER_FILES
         src/indexer/indexer.cpp
         src/indexer/indexer.h
@@ -26,7 +32,16 @@ set(FILTERS
         src/tokenizer/filters/russianPorterStemmer.cpp
         src/tokenizer/filters/russianPorterStemmer.h
         src/tokenizer/filters/englishStemmer.cpp
-        src/tokenizer/filters/englishStemmer.h)
+        src/tokenizer/filters/englishStemmer.h
+        src/tokenizer/filters/htmler.cpp
+        src/tokenizer/filters/htmler.h
+        src/tokenizer/filters/lowercaser.cpp
+        src/tokenizer/filters/lowercaser.h
+        src/tokenizer/filters/punctuator.h
+        src/tokenizer/filters/punctuator.cpp
+        src/tokenizer/filters/stopWords.h
+        src/tokenizer/filters/stopWords.cpp
+        src/tokenizer/tokenizer.h)
 
 set(SOURCE_FILES
         ${STORAGE_FILES}
