--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "extern/spdlog"]
-	path = extern/spdlog
-	url = https://github.com/gabime/spdlog.git
-[submodule "external/spdlog"]
-	path = external/spdlog
+[submodule "externals/spdlog"]
+	path = externals/spdlog
 	url = https://github.com/gabime/spdlog.git
