--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,10 @@ set(CMAKE_CXX_STANDARD 20)
 set(STORAGE_FILES
         src/storages/fileStorage.cpp
         src/storages/fileStorage.h
-        src/storages/iIndexStorage.h)
+        src/storages/iIndexStorage.h
+        src/storages/multiFileIndexStorage.h
+        src/storages/multiFileIndexStorage.cpp
+)
 
 set(MODEL_FILES
         src/models/token.h
