feat: single file index storage (#15)
* refactor: add subdir for storages

* chore: update doc & create header for index

* docs: add class work desc for single storage

* chore: add posMapSize to bigToken

* feat: define block_mask and size

* feat: add stucture for tracking available space

* feat: add createIndex logic

* chore: finish find available block + markAvailable

* chore: add writing into storage file

* chore: add prefix file_ to filenames

* chore: add save and load metaData

* docs: translate to eng + schema

* fix: add logging + fix copying in file

* fix: add logging to getNewBlock & markAvailable

* feat: add methods to work with meta

* fix: implement virtual func in multiStorage

* chore: merge ver from main

* fix: constructor BigToken

* chore: return loadStorageMeta() to constructor

* refactor: move TokenInfo to common

* chore: apply new interface + fix blockToPos

* fix: add logging + fix funcs

* style: my tests

* docs: add a few comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(STORAGE_FILES
         src/storages/indexes/iIndexStorage.h
         src/storages/indexes/multi/multiFileIndexStorage.h
         src/storages/indexes/multi/multiFileIndexStorage.cpp
+        src/storages/indexes/single/singleIndexStorage.cpp
+        src/storages/indexes/single/singleIndexStorage.h
 )
 
 set(MODEL_FILES
